--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.mail.properties.mail.smtp.auth=true
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://umj7-009.cafe24.com:3306/puhu17?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=puhu17
-spring.datasource.password=p1o2i3u4!
+spring.datasource.username=
+spring.datasource.password=!
 
 
 spring.jpa.properties.hibernate.show_sql=true
